# kaleidoscope-llvm

./: .clang-format  .gitignore  CMakeLists.txt
docs/: Getting Started with LLVM.md
scripts/: build.bat
src/: AST.cpp  AST.h  CMakeLists.txt  IR.cpp  IR.h  KailedoscopeJIT.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
